Use kotlinx benchmark tasks for image memory evidence
Route pipeline allocation and memory-profile evidence through named kotlinx-benchmark Gradle configurations while keeping JVM GC profiler output as an explicit addendum because the plugin DSL does not expose profiler arguments.

Constraint: kotlinx-benchmark JVM execution uses the JMH backend and lacks a Gradle DSL hook for -prof gc.
Rejected: manual JMH-only report path | it hid the primary benchmark runner expected by the module.
Confidence: high
Scope-risk: moderate
Directive: Prefer named kotlinx-benchmark configurations for new image benchmark evidence; keep profiler-only JMH runs as clearly named addenda.
Tested: ./gradlew :bluetape4k-images-benchmark:compileBenchmarkKotlin --console=plain; JAVA_HOME=$(/usr/libexec/java_home -v 25) ./gradlew :bluetape4k-images-benchmark:benchmarkPipelineAllocationBenchmark --console=plain; JAVA_HOME=$(/usr/libexec/java_home -v 25) ./gradlew :bluetape4k-images-benchmark:benchmarkMemoryProfileBenchmark --console=plain; git diff --check; README/doc link check missing=0; xmllint chart SVGs; rsvg-convert chart PNGs.
Not-tested: Java 21 JVips execution on Linux.