@@ -9,11 +9,17 @@ This report records the first allocation-sensitive baseline for
 |------|-------|
 | Host | macOS arm64 |
 | JVM | GraalVM Java 25.0.3 |
-| Command | `java --enable-native-access=ALL-UNNAMED -jar images-benchmark/build/benchmarks/benchmark/jars/bluetape4k-images-benchmark-benchmark-jmh-0.1.3-JMH.jar '.*ImagePipelineBenchmark.*' -wi 1 -i 3 -w 1s -r 1s -f 1 -prof gc -rf json -rff images-benchmark/docs/raw/benchmark-pipeline-allocation-2026-05-28-macos-java25.json` |
-| Raw JSON | [`raw/benchmark-pipeline-allocation-2026-05-28-macos-java25.json`](raw/benchmark-pipeline-allocation-2026-05-28-macos-java25.json) |
+| Primary command | `JAVA_HOME=$(/usr/libexec/java_home -v 25) ./gradlew :bluetape4k-images-benchmark:benchmarkPipelineAllocationBenchmark --console=plain` |
+| Primary raw JSON | [`raw/benchmark-pipeline-allocation-2026-05-28-macos-java25.json`](raw/benchmark-pipeline-allocation-2026-05-28-macos-java25.json) |
+| Allocation addendum | [`raw/benchmark-pipeline-allocation-jmh-gc-2026-05-28-macos-java25.json`](raw/benchmark-pipeline-allocation-jmh-gc-2026-05-28-macos-java25.json) |
 
 > The run used synthetic fallback images because `bench/photo-4k.jpg` and
 > `bench/document.png` are not committed.
+>
+> The benchmark source and primary execution path use `kotlinx-benchmark`.
+> On JVM, `kotlinx-benchmark` uses JMH as its backend. The Gradle DSL does not
+> expose JMH profilers, so allocation values are recorded in the separate JMH GC
+> profiler addendum.
 
 ## Results
 
@@ -22,8 +28,8 @@ per operation from the JMH GC profiler.
 
 | Benchmark | Pipeline | AverageTime | Allocation |
 |-----------|----------|-------------|------------|
-| `scrimage_photoPreviewJpeg` | 4K photo -> resize 1280x720 -> grayscale -> JPEG | 61.86 ms/op | 53,217,235 B/op (50.75 MB/op) |
-| `scrimage_documentPreviewPng` | 1240x1754 document -> resize 640x905 -> blur -> sepia -> PNG | 48.04 ms/op | 63,850,035 B/op (60.89 MB/op) |
+| `scrimage_photoPreviewJpeg` | 4K photo -> resize 1280x720 -> grayscale -> JPEG | 62.86 ms/op | 53,217,235 B/op (50.75 MB/op) |
+| `scrimage_documentPreviewPng` | 1240x1754 document -> resize 640x905 -> blur -> sepia -> PNG | 51.47 ms/op | 63,850,035 B/op (60.89 MB/op) |
 
 ![Image pipeline allocation benchmark chart](../../docs/images/readme-charts/images-benchmark-pipeline-allocation-chart-01.png)
 
